chore: Update CSS to include fixed position for video background and hidden overflow
The CSS changes in this commit update the position of the video background from absolute to fixed, ensuring that it remains fixed in place even when scrolling. Additionally, the overflow property is changed from 'off' to 'hidden' to prevent any overflow content from being visible. These changes improve the visual experience of the application.

--- a/styles/app.module.css
+++ b/styles/app.module.css
@@ -3,20 +3,20 @@
   color: #ffffff;
   position: relative;
   overflow: hidden;
-  height: 100vh; /* Full viewport height */
+  height: 100%;  /* Change from 100vh to 100% */
+  width: 100%;
 }
 
 .videoBackground {
-  position: absolute;
+  position: fixed;  /* Change from absolute to fixed */
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: off;
+  overflow: hidden;  /* Change from 'off' to 'hidden' */
   object-fit: cover;
   z-index: -1;
   background-color: #282828;
-  
 }
 
 .main {
