--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
 
 /* Apply base styles */
 body, html, #__next {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   margin: 0;
 }
